Change checkpoints folder to drive

--- a/exps/zrun_vocs/r50_voc_semi662/config_semi.yaml
+++ b/exps/zrun_vocs/r50_voc_semi662/config_semi.yaml
@@ -60,7 +60,7 @@ trainer: # Required.
 # 3. output files, and loss
 # # # # # # # # # # # # # # 
 saver:
-  snapshot_dir: checkpoints
+  snapshot_dir: /content/drive/MyDrive/checkpoints
   pretrain: ''
   use_tb: False
 
