Add resume from checkpoint in training

--- a/exps/zrun_vocs/r50_voc_semi662/config_semi.yaml
+++ b/exps/zrun_vocs/r50_voc_semi662/config_semi.yaml
@@ -63,6 +63,7 @@ saver:
   snapshot_dir: /content/drive/MyDrive/checkpoints
   pretrain: ''
   use_tb: False
+  auto_resume: True
 
 criterion:
   type: CELoss
